@@ -1,6 +1,9 @@
 Priorities for release:
   [ none ]
 
+!! Must fix require_file stuff.  It is really gross, and I don't
+   understand it any more.
+
 ** when can aclocal.m4 be auto-generated?
 
 ** many requests for a way to omit a file from the distribution.
