@@ -3396,7 +3396,9 @@ sub require_file_internal
 	    if (-f $fullfile)
 	    {
 		$found_it = 1;
-		&push_dist_common ($file) if $dir eq $relative_dir;
+		# FIXME Once again, special-case `.'.
+		&push_dist_common ($file)
+		    if $dir eq $relative_dir || $dir eq '.';
 		$save_dir = $dir;
 		last;
 	    }
