@@ -1,5 +1,7 @@
 Mon Aug 12 13:58:55 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* libobj2.test: New file.
+
 	* order.test: New file.
 
 Sun Aug 11 00:10:42 1996  Tom Tromey  <tromey@creche.cygnus.com>
