@@ -1,5 +1,8 @@
 Mon Aug 12 10:28:46 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* automake.in (require_file_internal): Special-case `.' when
+	finding files to distribute.  Test libobj2.test.
+
 	* aclocal.in (add_file): Fixed regexp for matching AC_DEFUN.  Test
 	order.test.
 
